re PR tree-optimization/54634 (miscompilation with -O3  -ftree-loop-distribution)

2012-09-20  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/54634
	* tree-data-ref.c (get_references_in_stmt): For now give
	up for pure functions.

From-SVN: r191567